# neural-network-art-images

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: architecture.md
include/artnet/: ArtScanner.h  Clusterer.h  EmbeddingIndex.h  Export.h  ImageRecord.h  MainWindow.h  OpenCvDnnModel.h
src/: ArtScanner.cpp  Clusterer.cpp  EmbeddingIndex.cpp  Export.cpp  MainWindow.cpp  OpenCvDnnModel.cpp  main.cpp
tests/: CoreTests.cpp
